fixing reset and spacing

--- a/base/_headings.scss
+++ b/base/_headings.scss
@@ -1,6 +1,12 @@
 /* ———————————————————————————————————————— */
-/* JD - Base Headings
+/*  Base - Headings
 /* ———————————————————————————————————————— */
+
+/*
+  Headings bassed of the settings
+  in the fonts file can be overwritten
+  in this file.
+*/
 
 // Overrides 
 // $h1-heading-size: 40px;
